--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,7 +1,109 @@
 doctype html
-html
+html(lang='en')
   head
-    title= title
-    link(rel='stylesheet', href='/stylesheets/style.css')
+    meta(charset='utf-8')
+    link(rel='icon', type='image/png', href='/images/favicon.ico')
+    link(rel='apple-touch-icon', sizes='76x76', href='/images/apple-icon.png')
+    meta(http-equiv='X-UA-Compatible', content='IE=edge,chrome=1')
+    title Twitter Bot
+    meta(content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0', name='viewport')
+    meta(name='viewport', content='width=device-width')
+    // Bootstrap core CSS
+    link(href='/stylesheets/bootstrap.min.css', rel='stylesheet')
+    link(href='/stylesheets/paper-kit.css?v=2.1.0', rel='stylesheet')
+    // CSS for Demo Purpose, don't include it in your project
+    link(href='/stylesheets/demo.css', rel='stylesheet')
+    // Fonts and icons
+    link(href='http://fonts.googleapis.com/css?family=Montserrat:400,300,700', rel='stylesheet', type='text/css')
+    link(href='http://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css', rel='stylesheet')
+    link(href='/stylesheets/nucleo-icons.css', rel='stylesheet')
   body
-    block content
+    nav.navbar.navbar-expand-md.fixed-top.navbar-transparent(color-on-scroll='500')
+      .container
+        .navbar-translate
+          button.navbar-toggler.navbar-toggler-right.navbar-burger(type='button', data-toggle='collapse', data-target='#navbarToggler', aria-controls='navbarTogglerDemo02', aria-expanded='false', aria-label='Toggle navigation')
+            span.navbar-toggler-bar
+            span.navbar-toggler-bar
+            span.navbar-toggler-bar
+          a.navbar-brand(href='https://www.creative-tim.com') Twitter Bot
+        #navbarToggler.collapse.navbar-collapse
+          ul.navbar-nav.ml-auto
+            li.nav-item
+              a.nav-link(rel='tooltip', title='Follow me on Twitter', data-placement='bottom', href='https://twitter.com/manishdwibedy', target='_blank')
+                i.fa.fa-twitter
+                p.d-lg-none Twitter
+            li.nav-item
+              a.nav-link(rel='tooltip', title='Like me on Facebook', data-placement='bottom', href='https://www.facebook.com/manish.dwibedy', target='_blank')
+                i.fa.fa-facebook-square
+                p.d-lg-none Facebook
+            li.nav-item
+              a.nav-link(rel='tooltip', title='Follow me on Instagram', data-placement='bottom', href='https://www.instagram.com/real.geeky/', target='_blank')
+                i.fa.fa-instagram
+                p.d-lg-none Instagram
+            li.nav-item
+              a.nav-link(rel='tooltip', title='Star on GitHub', data-placement='bottom', href='https://github.com/manishdwibedy', target='_blank')
+                i.fa.fa-github
+                p.d-lg-none GitHub
+            li.nav-item
+              a.nav-link(rel='tooltip', title='Star on GitHub', data-placement='bottom', href='https://www.linkedin.com/in/manishdwibedy', target='_blank')
+                i.fa.fa-linkedin
+                p.d-lg-none LinkedIn
+    .wrapper
+      .page-header.section-dark(style="background-image: url('/images/antoine-barres.jpg')")
+        .filter
+        .content-center
+          .container
+            .title-brand
+              h1.presentation-title Twitter Bot
+              .fog-low
+                img(src='/images/fog-low.png', alt='')
+              .fog-low.right
+                img(src='/images/fog-low.png', alt='')
+            h2.presentation-subtitle.text-center Responding to tweeters :)
+        .moving-clouds(style="background-image: url('/images/clouds.png'); ")
+        h6.category.category-absolute
+          | Original Template - Thanks to
+          a(href='https://www.creative-tim.com', target='_blank')
+            img.creative-tim-logo(src='/images/creative-tim-white-slim2.png')
+      br
+.main
+    .section.section-buttons
+        .container
+            .tim-title
+                p
+                    font(size='6') Bot Status
+                    &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+                    button.btn.btn-danger.btn-round(type='button' onclick='toggleBot()') Not Running
+    footer.footer
+      .container
+        .row
+          //nav.footer-nav
+          //  ul
+          //    li
+          //      a(href='http://www.creative-tim.com') Creative Tim
+          //    li
+          //      a(href='http://blog.creative-tim.com') Blog
+          //    li
+          //      a(href='http://www.creative-tim.com/license') Licenses
+          .credits.ml-auto
+            span.copyright
+              | ©
+              script.
+                  document.write(new Date().getFullYear())
+              | , made with
+              i.fa.fa-heart.heart
+              |  by Creative Tim
+  // Core JS Files
+  script(src='/javascripts/jquery-3.2.1.js', type='text/javascript')
+  script(src='/javascripts/jquery-ui-1.12.1.custom.min.js', type='text/javascript')
+  script(src='/javascripts/popper.js', type='text/javascript')
+  script(src='/javascripts/bootstrap.min.js', type='text/javascript')
+  // Switches
+  script(src='/javascripts/bootstrap-switch.min.js')
+  // Plugins for Slider
+  script(src='/javascripts/nouislider.js')
+  // Plugins for DateTimePicker
+  script(src='/javascripts/moment.min.js')
+  script(src='/javascripts/bootstrap-datetimepicker.min.js')
+  // Paper Kit Initialization and functons
+  script(src='/javascripts/paper-kit.js?v=2.1.0')
