--- a/views/layout.jade
+++ b/views/layout.jade
@@ -93,6 +93,7 @@ html(lang='en')
               | , made with
               i.fa.fa-heart.heart
               |  by Creative Tim
+  script(src='/javascripts/bot.js', type='text/javascript')
   // Core JS Files
   script(src='/javascripts/jquery-3.2.1.js', type='text/javascript')
   script(src='/javascripts/jquery-ui-1.12.1.custom.min.js', type='text/javascript')
