--- a/views/layout.jade
+++ b/views/layout.jade
@@ -17,6 +17,28 @@ html(lang='en')
     link(href='http://fonts.googleapis.com/css?family=Montserrat:400,300,700', rel='stylesheet', type='text/css')
     link(href='http://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css', rel='stylesheet')
     link(href='/stylesheets/nucleo-icons.css', rel='stylesheet')
+
+    // Core JS Files
+    script(src='/javascripts/jquery-3.2.1.js', type='text/javascript')
+    script(src='/javascripts/jquery-ui-1.12.1.custom.min.js', type='text/javascript')
+    script(src='/javascripts/popper.js', type='text/javascript')
+    script(src='/javascripts/bootstrap.min.js', type='text/javascript')
+
+    // Switches
+    script(src='/javascripts/bootstrap-switch.min.js')
+
+    // Plugins for Slider
+    script(src='/javascripts/nouislider.js')
+
+    // Plugins for DateTimePicker
+    script(src='/javascripts/moment.min.js')
+    script(src='/javascripts/bootstrap-datetimepicker.min.js')
+
+    // Paper Kit Initialization and functons
+    script(src='/javascripts/paper-kit.js?v=2.1.0')
+
+    // Twitter Bot
+    script(src='/javascripts/bot.js', type='text/javascript')
   body
     nav.navbar.navbar-expand-md.fixed-top.navbar-transparent(color-on-scroll='500')
       .container
@@ -73,7 +95,7 @@ html(lang='en')
                 p
                     font(size='6') Bot Status
                     &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-                    button.btn.btn-danger.btn-round(type='button' onclick='toggleBot()') Not Running
+                    button.btn.btn-danger.btn-round(type='button' onclick='toggleBot()' id='bot-status') Not Running
     footer.footer
       .container
         .row
@@ -93,18 +115,4 @@ html(lang='en')
               | , made with
               i.fa.fa-heart.heart
               |  by Creative Tim
-  script(src='/javascripts/bot.js', type='text/javascript')
-  // Core JS Files
-  script(src='/javascripts/jquery-3.2.1.js', type='text/javascript')
-  script(src='/javascripts/jquery-ui-1.12.1.custom.min.js', type='text/javascript')
-  script(src='/javascripts/popper.js', type='text/javascript')
-  script(src='/javascripts/bootstrap.min.js', type='text/javascript')
-  // Switches
-  script(src='/javascripts/bootstrap-switch.min.js')
-  // Plugins for Slider
-  script(src='/javascripts/nouislider.js')
-  // Plugins for DateTimePicker
-  script(src='/javascripts/moment.min.js')
-  script(src='/javascripts/bootstrap-datetimepicker.min.js')
-  // Paper Kit Initialization and functons
-  script(src='/javascripts/paper-kit.js?v=2.1.0')
+
