creating the bot dashboard.

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -93,9 +93,7 @@ html(lang='en')
         .container
             .tim-title
                 p
-                    font(size='6') Bot Status
-                    &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-                    button.btn.btn-danger.btn-round(type='button' onclick='toggleBot()' id='bot-status') Not Running
+                    button.btn.btn-danger.btn-round(type='button' onclick='dashboard()' id='bot-status') Not Running
     footer.footer
       .container
         .row
