--- a/views/bot.jade
+++ b/views/bot.jade
@@ -2,43 +2,23 @@ doctype html
 html(lang='en')
     head
         meta(charset='utf-8')
-            link(rel='icon', type='image/png', href='/images/favicon.ico')
-            link(rel='apple-touch-icon', sizes='76x76', href='/images/apple-icon.png')
-            meta(http-equiv='X-UA-Compatible', content='IE=edge,chrome=1')
-            title Twitter Bot
-            meta(content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0', name='viewport')
-            meta(name='viewport', content='width=device-width')
-            // Bootstrap core CSS
-            link(href='/stylesheets/bootstrap.min.css', rel='stylesheet')
-            link(href='/stylesheets/paper-kit.css?v=2.1.0', rel='stylesheet')
-            // CSS for Demo Purpose, don't include it in your project
-            link(href='/stylesheets/demo.css', rel='stylesheet')
-            // Fonts and icons
-            link(href='http://fonts.googleapis.com/css?family=Montserrat:400,300,700', rel='stylesheet', type='text/css')
-            link(href='http://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css', rel='stylesheet')
-            link(href='/stylesheets/nucleo-icons.css', rel='stylesheet')
+        link(rel='icon', type='image/png', href='/images/favicon.ico')
+        link(rel='apple-touch-icon', sizes='76x76', href='/images/apple-icon.png')
+        meta(http-equiv='X-UA-Compatible', content='IE=edge,chrome=1')
+        title Twitter Bot
+        meta(content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0', name='viewport')
+        meta(name='viewport', content='width=device-width')
+        // Bootstrap core CSS
+        link(href='/stylesheets/bootstrap.min.css', rel='stylesheet')
+        link(href='/stylesheets/paper-kit.css?v=2.1.0', rel='stylesheet')
+        // CSS for Demo Purpose, don't include it in your project
+        link(href='/stylesheets/demo.css', rel='stylesheet')
+        // Fonts and icons
+        link(href='http://fonts.googleapis.com/css?family=Montserrat:400,300,700', rel='stylesheet', type='text/css')
+        link(href='http://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css', rel='stylesheet')
+        link(href='/stylesheets/nucleo-icons.css', rel='stylesheet')
 
-            // Core JS Files
-            script(src='/javascripts/jquery-3.2.1.js', type='text/javascript')
-            script(src='/javascripts/jquery-ui-1.12.1.custom.min.js', type='text/javascript')
-            script(src='/javascripts/popper.js', type='text/javascript')
-            script(src='/javascripts/bootstrap.min.js', type='text/javascript')
 
-            // Switches
-            script(src='/javascripts/bootstrap-switch.min.js')
-
-            // Plugins for Slider
-            script(src='/javascripts/nouislider.js')
-
-            // Plugins for DateTimePicker
-            script(src='/javascripts/moment.min.js')
-            script(src='/javascripts/bootstrap-datetimepicker.min.js')
-
-            // Paper Kit Initialization and functons
-            script(src='/javascripts/paper-kit.js?v=2.1.0')
-
-            // Twitter Bot
-            script(src='/javascripts/bot.js', type='text/javascript')
     body
         nav.navbar.navbar-expand-md.fixed-top.navbar-transparent(color-on-scroll='150')
             .container
@@ -47,50 +27,47 @@ html(lang='en')
                         span.navbar-toggler-bar
                         span.navbar-toggler-bar
                         span.navbar-toggler-bar
-                    a.navbar-brand(href='https://www.creative-tim.com') Paper Kit 2
+                    a.navbar-brand(href='#') Twitter Bot
                 #navbarToggler.collapse.navbar-collapse
                     ul.navbar-nav.ml-auto
-                        li.nav-item
-                            a.nav-link(href='../index.html')
-                                i.nc-icon.nc-layout-11
-                                | Components
-                        li.nav-item
-                            a.nav-link(href='../documentation/tutorial-components.html', target='_blank')
-                                i.nc-icon.nc-book-bookmark
-                                |   Documentation
-                        li.nav-item
-                            a.nav-link(rel='tooltip', title='Follow us on Twitter', data-placement='bottom', href='https://twitter.com/CreativeTim', target='_blank')
-                                i.fa.fa-twitter
-                                p.d-lg-none Twitter
-                        li.nav-item
-                            a.nav-link(rel='tooltip', title='Like us on Facebook', data-placement='bottom', href='https://www.facebook.com/CreativeTim', target='_blank')
-                                i.fa.fa-facebook-square
-                                p.d-lg-none Facebook
-                        li.nav-item
-                            a.nav-link(rel='tooltip', title='Follow us on Instagram', data-placement='bottom', href='https://www.instagram.com/CreativeTimOfficial', target='_blank')
-                                i.fa.fa-instagram
-                                p.d-lg-none Instagram
-                        li.nav-item
-                            a.nav-link(rel='tooltip', title='Star on GitHub', data-placement='bottom', href='https://www.github.com/CreativeTimOfficial', target='_blank')
-                                i.fa.fa-github
-                                p.d-lg-none GitHub
+                        ul.navbar-nav.ml-auto
+                            li.nav-item
+                                a.nav-link(rel='tooltip', title='Follow me on Twitter', data-placement='bottom', href='https://twitter.com/manishdwibedy', target='_blank')
+                                    i.fa.fa-twitter
+                                    p.d-lg-none Twitter
+                            li.nav-item
+                                a.nav-link(rel='tooltip', title='Like me on Facebook', data-placement='bottom', href='https://www.facebook.com/manish.dwibedy', target='_blank')
+                                    i.fa.fa-facebook-square
+                                    p.d-lg-none Facebook
+                            li.nav-item
+                                a.nav-link(rel='tooltip', title='Follow me on Instagram', data-placement='bottom', href='https://www.instagram.com/real.geeky/', target='_blank')
+                                    i.fa.fa-instagram
+                                    p.d-lg-none Instagram
+                            li.nav-item
+                                a.nav-link(rel='tooltip', title='Star on GitHub', data-placement='bottom', href='https://github.com/manishdwibedy', target='_blank')
+                                    i.fa.fa-github
+                                    p.d-lg-none GitHub
+                            li.nav-item
+                                a.nav-link(rel='tooltip', title='Star on GitHub', data-placement='bottom', href='https://www.linkedin.com/in/manishdwibedy', target='_blank')
+                                    i.fa.fa-linkedin
+                                    p.d-lg-none LinkedIn
         .wrapper
-            .page-header.page-header-xs(data-parallax='true', style="background-image: url('../assets/img/fabio-mangione.jpg');")
+            .page-header.page-header-xs(data-parallax='true', style="background-image: url('/images/fabio-mangione.jpg');")
                 .filter
             .section.profile-content
                 .container
                     .owner
                         .avatar
-                            img.img-circle.img-no-padding.img-responsive(src='../assets/img/faces/joe-gardner-2.jpg', alt='Circle Image')
+                            img.img-circle.img-no-padding.img-responsive(src='/images/twitter.jpg', alt='Twitter Boit')
                         .name
                             h4.title
-                                | Jane Faker
+                                | Twitter Bot
                                 br
-                            h6.description Music Producer
+                            h6.description Responding to tweets :)
                     .row
                         .col-md-6.ml-auto.mr-auto.text-center
                             p
-                                | An artist of considerable range, Jane Faker — the name taken by Melbourne-raised, Brooklyn-based Nick Murphy — writes, performs and records all of his own music, giving it a warm, intimate feel with a solid groove structure.
+                                | Now lets respond to possible leads automatically.
                             br
                             btn.btn.btn-outline-default.btn-round
                                 i.fa.fa-cog
@@ -112,7 +89,7 @@ html(lang='en')
                                         li
                                             .row
                                                 .col-md-2.col-sm-2.ml-auto.mr-auto
-                                                    img.img-circle.img-no-padding.img-responsive(src='../assets/img/faces/clem-onojeghuo-2.jpg', alt='Circle Image')
+                                                    img.img-circle.img-no-padding.img-responsive(src='/images/faces/clem-onojeghuo-2.jpg', alt='Circle Image')
                                                 .col-md-7.col-sm-4.ml-auto.mr-auto
                                                     h6
                                                         | Flume
@@ -127,7 +104,7 @@ html(lang='en')
                                         li
                                             .row
                                                 .col-md-2.ml-auto.mr-auto
-                                                    img.img-circle.img-no-padding.img-responsive(src='../assets/img/faces/ayo-ogunseinde-2.jpg', alt='Circle Image')
+                                                    img.img-circle.img-no-padding.img-responsive(src='/images/faces/ayo-ogunseinde-2.jpg', alt='Circle Image')
                                                 .col-md-7.col-sm-4
                                                     h6
                                                         | Banks
@@ -161,10 +138,10 @@ html(lang='en')
                             i.fa.fa-heart.heart
                             |  by Creative Tim
     // Core JS Files
-    script(src='../assets/js/jquery-3.2.1.js', type='text/javascript')
-    script(src='../assets/js/jquery-ui-1.12.1.custom.min.js', type='text/javascript')
-    // <script src="../assets/js/tether.min.js" type="text/javascript"></script>
+    script(src='/javascripts/jquery-3.2.1.js', type='text/javascript')
+    script(src='/javascripts/jquery-ui-1.12.1.custom.min.js', type='text/javascript')
+     //<script src="/javascripts/tether.min.js" type="text/javascript"></script>
     script(src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js', integrity='sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4', crossorigin='anonymous')
-    script(src='../assets/js/bootstrap.min.js', type='text/javascript')
+    script(src='/javascripts/bootstrap.min.js', type='text/javascript')
     // Paper Kit Initialization snd functons
-    script(src='../assets/js/paper-kit.js?v=2.1.0')
+    script(src='/javascripts/paper-kit.js?v=2.1.0')
