--- a/views/bot.jade
+++ b/views/bot.jade
@@ -69,6 +69,11 @@ html(lang='en')
                             p
                                 | Now lets respond to possible leads automatically.
                             br
+                            btn.btn.btn-outline-default.btn-round#toggleBot
+                                i.fa.fa-play
+                                |  Start
+                            br
+                            br
                             btn.btn.btn-outline-default.btn-round#setting
                                 i.fa.fa-cog
                                 |  Settings
@@ -144,7 +149,7 @@ html(lang='en')
     script(src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js', integrity='sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4', crossorigin='anonymous')
     script(src='/javascripts/bootstrap.min.js', type='text/javascript')
     // Paper Kit Initialization snd functons
-    script(src='/javascripts/paper-kit.js?v=2.1.0')
+    //script(src='/javascripts/paper-kit.js?v=2.1.0')
 
     // popup
     script(src='/javascripts/vex.combined.min.js')
