edit bot dashboard.

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -93,7 +93,7 @@ html(lang='en')
         .container
             .tim-title
                 p
-                    button.btn.btn-danger.btn-round(type='button' onclick='dashboard()' id='bot-status') Not Running
+                    button.btn.btn-danger.btn-round(type='button' id='dashboard' onclick='dashboard()' style="width:80%; height: 60px; margin-left: 10%;") Twitter Bot Dashboard
     footer.footer
       .container
         .row
