adding my name at the end.

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -112,5 +112,5 @@ html(lang='en')
                   document.write(new Date().getFullYear())
               | , made with
               i.fa.fa-heart.heart
-              |  by Creative Tim
+              |  by Manish Dwibedy
 
