--- a/views/bot.jade
+++ b/views/bot.jade
@@ -141,7 +141,7 @@ html(lang='en')
                                 document.write(new Date().getFullYear())
                             | , made with
                             i.fa.fa-heart.heart
-                            |  by Creative Tim
+                            |  by Manish Dwibedy
     // Core JS Files
     script(src='/javascripts/jquery-3.2.1.js', type='text/javascript')
     script(src='/javascripts/jquery-ui-1.12.1.custom.min.js', type='text/javascript')
