now using environment variables for security.

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -84,7 +84,7 @@ html(lang='en')
             h2.presentation-subtitle.text-center Responding to tweeters :)
         .moving-clouds(style="background-image: url('/images/clouds.png'); ")
         h6.category.category-absolute
-          | Original Template - Thanks to
+          | Template - Thanks to
           a(href='https://www.creative-tim.com', target='_blank')
             img.creative-tim-logo(src='/images/creative-tim-white-slim2.png')
       br
